Vista mobile terminada

--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -15,6 +15,7 @@
     --marron-rojizo: #290A0A;
     --rojo-claro: #984141;
     --gris: #937272;
+    --gris-claro: #d3d3d3;
     --negro: #1F1F1E;
     
         /* Fuentes */
