--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,21 @@
 @import url("./variables.css");
 
+ul,
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+p {
+    margin: 0;
+}
+
 body {
     background-color: var(--blanco2);
     font-family: var(--font-play);
@@ -113,6 +129,10 @@ body {
     margin-top: 7rem;
 }
 
+.section_nosotros {
+    padding: 10px;
+}
+
 #nosotros {
     color: var(--marron-rojizo);
     letter-spacing: 0.5px;
@@ -127,7 +147,7 @@ body {
 
 .banner {
     width: 100%;
-    height: 200px;
+    height: 220px;
 
     & img {
         width: 100%;
@@ -163,7 +183,7 @@ body {
     width: 100%;
 
     & h4 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         color: var(--marron-rojizo);
     }
 }
@@ -171,6 +191,7 @@ body {
 .section_menu {
     background-color: white;
     margin-bottom: 2rem;
+    padding: 10px;
 }
 
 /* Fin menu */
@@ -184,16 +205,17 @@ body {
 }
 
 form {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
 }
 
 .title_reserva {
     margin-bottom: 2rem;
+
     & h4 {
         margin: 0;
         text-align: center;
-        font-size: 8vh;
+        font-size: 6vh;
     }
 }
 
@@ -257,5 +279,84 @@ form {
         width: 100%;
         height: 250px;
         border: none;
+    }
+}
+
+.map_container .directions {
+    padding: 10px;
+    color: var(--marron-rojizo);
+
+    & h4 {
+        font-weight: 600;
+        font-size: 18px;
+        border-bottom: thin solid var(--marron-rojizo)
+    }
+}
+
+/* Footer */
+footer {
+    margin-top: 3rem;
+    padding: 10px;
+    background-color: var(--negro);
+    color: var(--gris-claro);
+}
+
+.footer_logo {
+    margin-bottom: 1rem;
+}
+
+.footer_contains {
+    background-color: inherit;
+
+    & article {
+        margin-top: 2rem;
+    }
+}
+
+.footer_subtitle_container {
+    border-bottom: thin solid lightgray;
+    margin-bottom: 0.5rem;
+
+    & h4 {
+        font-weight: 600;
+        font-size: 16px;
+    }
+}
+
+#footer_social {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+
+    & li {
+        padding: 8px;
+        width: 50px;
+        height: 50px;
+    }
+}
+
+#footer_social a {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    transition: color .3s ease;
+
+    &:hover {
+        color: white;
+    }
+
+    & i {
+        font-size: 1.5rem;
+    }
+}
+
+#copy {
+    margin-top: 4rem;
+
+    & p {
+        font-size: 12px;
     }
 }
