--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
-        defer></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="../public/css/styles.css">
 </head>
 
@@ -56,7 +56,7 @@
                     Sabor y excelencia te están esperando.</p>
             </div>
             <div id="fondo_lateral_container">
-                <img src="../public/images/fondo_2.png" alt="plato_fondo">
+                <img src="..../public/images/fondo_2.png" alt="plato_fondo" loading="lazy">
             </div>
         </section>
         <!-- Seccion de mejores platos -->
@@ -68,7 +68,7 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
+                        <img src="../public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
                         <p class="name"><strong>Ensalada con mariscos</strong></p>
                         <p class="price position">$1000</p>
                         <div class="position">
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
+                        <img src="../public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
                         <p class="name"><strong>Ensalada con mariscos</strong></p>
                         <p class="price position">$1000</p>
                         <div class="position">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
+                        <img src="../public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
                         <p class="name"><strong>Ensalada con mariscos</strong></p>
                         <p class="price position">$1000</p>
                         <div class="position">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
+                        <img src="../public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
                         <p class="name"><strong>Ensalada con mariscos</strong></p>
                         <p class="price position">$1000</p>
                         <div class="position">
@@ -136,7 +136,7 @@
         <!-- Seccion sobre nosotros -->
         <section class="section">
             <div>
-                <article>
+                <article class="section_nosotros">
                     <h2 id="nosotros">Sobre nosotros</h2>
                     <div>
                         <p>En La Luna y La Miel, la pasión por la comida y la hospitalidad se fusionan para brindarte
@@ -181,22 +181,23 @@
                 <div id="carouselEnsaladas" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/public/images/ensalada_mariscos.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/ensalada_mariscos.png" class="image_card"
+                                alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/ensalada.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/ensalada.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/ensalada_pollo.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/ensalada_pollo.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/ensalada.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/ensalada.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
@@ -221,22 +222,22 @@
                 <div id="carouselMenuMain" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/public/images/bistec.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/bistec.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/estofado.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/estofado.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/albondigas.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/albondigas.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/lasaña.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/lasaña.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
@@ -261,22 +262,22 @@
                 <div id="carouselPastas" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/public/images/bistec.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/bistec.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/estofado.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/estofado.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/albondigas.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/albondigas.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/lasaña.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/lasaña.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
@@ -301,22 +302,22 @@
                 <div id="carouselPostres" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/public/images/bistec.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/bistec.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/estofado.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/estofado.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/albondigas.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/albondigas.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
                         <div class="carousel-item">
-                            <img src="/public/images/lasaña.png" class="image_card" alt="ensalada_mariscos">
+                            <img src="../public/images/lasaña.png" class="image_card" alt="ensalada_mariscos">
                             <p class="name"><strong>Ensalada con mariscos</strong></p>
                             <p class="price position">$1000</p>
                         </div>
@@ -367,8 +368,8 @@
                     </form>
                 </div>
                 <div class="map_container">
-                    <div>
-                        <h4>Visitanos</h4>
+                    <div class="directions">
+                        <h4 id="visitanos">Visitanos</h4>
                         <div>
                             <p>Calle falsa 123</p>
                             <p>Tel: +54-40324032</p>
@@ -393,41 +394,42 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. a explicabo.</p>
                 </div>
             </article>
-            <div>
+            <div class="footer_contains">
                 <article>
-                    <div>
+                    <div class="footer_subtitle_container">
                         <h4>Acceso rapido</h4>
                     </div>
                     <ul>
-                        <li>Inicio</li>
-                        <li>Sobre nosotros</li>
-                        <li>Menu</li>
-                        <li>Reserva</li>
+                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="#nosotros">Sobre nosotros</a></li>
+                        <li><a href="#menu">Menú</a></li>
+                        <li><a href="#reserva">Reservá</a></li>
                     </ul>
                 </article>
                 <article>
-                    <div>
+                    <div class="footer_subtitle_container">
                         <h4>Ayuda</h4>
                     </div>
                     <ul>
-                        <li>Visitanos</li>
-                        <li>Medios de pago</li>
-                        <li>Delivery</li>
+                        <li><a href="#visitanos">Visitanos</a></li>
+                        <li><a href="#">Medios de pago</a></li>
+                        <li><a href="#">Delivery</a></li>
                     </ul>
                 </article>
                 <article>
-                    <div>
+                    <div class="footer_subtitle_container">
                         <h4>Redes</h4>
                     </div>
-                    <ul>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                        <li><a href="http://" target="_blank" rel="noopener noreferrer">Pedidos ya</a></li>
+                    <ul id="footer_social">
+                        <li><a href="http://www.facebook.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="http://www.instagram.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="http://www.twitter.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a></li>
+                        <li><a href="https://github.com/BrianFloresOk" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a></li>
                     </ul>
                 </article>
             </div>
         </div>
-        <div>
+        <div id="copy">
             <p>&COPY; Copyright 2023 - La luna y la miel</p>
         </div>
     </footer>
