--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,25 @@ body {
     color: var(--marron-rojizo);
 }
 
+.logo_container {
+    width: 60%;
+    max-width: 200px;
+
+    & a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
+
 
 #presentation {
     padding: 0 0.75rem;
@@ -99,6 +118,7 @@ body {
 .image_card {
     display: block;
     width: 75%;
+    height: 225px;
     margin: auto;
     object-fit: contain;
 }
