--- a/views/index.html
+++ b/views/index.html
@@ -65,9 +65,9 @@
                 <p>Nos dedicamos a brindar el mejor servicio para que experimentes lo mejor de nuestros platos.
                     Sabor y excelencia te están esperando.</p>
             </div>
-            <!--             <div id="fondo_lateral_container">
-                <img src="..../public/images/fondos/fondo_2.png" alt="plato_fondo" loading="lazy">
-            </div> -->
+            <div id="fondo_lateral_container">
+                <img src="../public/images/fondos/fondo_2.png" alt="plato_fondo">
+            </div>
         </section>
         <!-- Seccion de mejores platos -->
         <div class="title">
@@ -559,7 +559,8 @@
                             <div class="menu-card swiper-slide">
                                 <div class="image-content">
                                     <div class="card-image">
-                                        <img src="../public/images/postres/mouse-chocolate-crema.png" alt="mouse-crema" class="card-img">
+                                        <img src="../public/images/postres/mouse-chocolate-crema.png" alt="mouse-crema"
+                                            class="card-img">
                                     </div>
                                 </div>
                                 <div class="card-content">
@@ -606,7 +607,8 @@
                             <div class="menu-card swiper-slide">
                                 <div class="image-content">
                                     <div class="card-image">
-                                        <img src="../public/images/postres/torta-oreo.png" alt="torta-oreo" class="card-img">
+                                        <img src="../public/images/postres/torta-oreo.png" alt="torta-oreo"
+                                            class="card-img">
                                     </div>
                                 </div>
                                 <div class="card-content">
@@ -617,8 +619,8 @@
                             <div class="menu-card swiper-slide">
                                 <div class="image-content">
                                     <div class="card-image">
-                                        <img src="../public/images/postres/torta-frutos-secos.png" alt="torta-frutos-secos"
-                                            class="card-img">
+                                        <img src="../public/images/postres/torta-frutos-secos.png"
+                                            alt="torta-frutos-secos" class="card-img">
                                     </div>
                                 </div>
                                 <div class="card-content">
@@ -629,7 +631,8 @@
                             <div class="menu-card swiper-slide">
                                 <div class="image-content">
                                     <div class="card-image">
-                                        <img src="../public/images/postres/torta-frutos-del-bosque.png" alt="torta-frutos-del-bosque" class="card-img">
+                                        <img src="../public/images/postres/torta-frutos-del-bosque.png"
+                                            alt="torta-frutos-del-bosque" class="card-img">
                                     </div>
                                 </div>
                                 <div class="card-content">
